@@ -38,6 +38,7 @@
 <p>2015-04-11  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/sgi.c (WriteSGIImage): Fix Coverity 55891 &quot;Resource leak&quot;.</li>
 <li>coders/psd.c (ReadPSDImage): Fix Coverity 55855 &quot;Resource leak&quot;.</li>
 <li>coders/pict.c (WritePICTImage): Fix Coverity 55867, 55875, 55883
 &quot;Resource leak&quot;.  Fix Coverity 55892 &quot;Resource leak&quot;.</li>
